# app/Models/tt_t_Rutina.php
@@ -5,6 +5,8 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 use App\Models\tt_t_DetalleRutina as detalleRutina;
+use App\Models\TT_T_Resultados as resultados;
+use App\Models\tt_t_Inscripcion as inscripcion;
 
 class tt_t_Rutina extends Model
 {
@@ -28,5 +30,15 @@ class tt_t_Rutina extends Model
     public function detalleRutina()
     {
         return $this->hasMany(detalleRutina::class, 'id_rutina')->with('detalleEjercicio');
+    }
+
+    public function inscripcion() 
+    {
+        return $this->hasOne(inscripcion::class, 'id', 'id_inscripcion')->with('cliente');
+    }
+
+    public function resultados()
+    {
+        return $this->hasOne(resultados::class, 'id_rutina', 'id');
     }
 }
